--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,105 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+@font-face {
+	font-family: "Quicksand";
+	font-style: normal;
+	font-weight: 300;
+	src: url("/fonts/quicksand/quicksand-v21-latin-300.eot"); /* IE9 Compat Modes */
+	src: local(""),
+		url("/fonts/quicksand/quicksand-v21-latin-300.eot?#iefix")
+			format("embedded-opentype"),
+		/* IE6-IE8 */ url("/fonts/quicksand/quicksand-v21-latin-300.woff2")
+			format("woff2"),
+		/* Super Modern Browsers */
+			url("/fonts/quicksand/quicksand-v21-latin-300.woff") format("woff"),
+		/* Modern Browsers */ url("/fonts/quicksand/quicksand-v21-latin-300.ttf")
+			format("truetype"),
+		/* Safari, Android, iOS */
+			url("/fonts/quicksand/quicksand-v21-latin-300.svg#Quicksand")
+			format("svg"); /* Legacy iOS */
+}
+/* quicksand-regular - latin */
+@font-face {
+	font-family: "Quicksand";
+	font-style: normal;
+	font-weight: 400;
+	src: url("/fonts/quicksand/quicksand-v21-latin-regular.eot"); /* IE9 Compat Modes */
+	src: local(""),
+		url("/fonts/quicksand/quicksand-v21-latin-regular.eot?#iefix")
+			format("embedded-opentype"),
+		/* IE6-IE8 */ url("/fonts/quicksand/quicksand-v21-latin-regular.woff2")
+			format("woff2"),
+		/* Super Modern Browsers */
+			url("/fonts/quicksand/quicksand-v21-latin-regular.woff") format("woff"),
+		/* Modern Browsers */
+			url("/fonts/quicksand/quicksand-v21-latin-regular.ttf") format("truetype"),
+		/* Safari, Android, iOS */
+			url("/fonts/quicksand/quicksand-v21-latin-regular.svg#Quicksand")
+			format("svg"); /* Legacy iOS */
+}
+/* quicksand-700 - latin */
+@font-face {
+	font-family: "Quicksand";
+	font-style: normal;
+	font-weight: 700;
+	src: url("/fonts/quicksand/quicksand-v21-latin-700.eot"); /* IE9 Compat Modes */
+	src: local(""),
+		url("/fonts/quicksand/quicksand-v21-latin-700.eot?#iefix")
+			format("embedded-opentype"),
+		/* IE6-IE8 */ url("/fonts/quicksand/quicksand-v21-latin-700.woff2")
+			format("woff2"),
+		/* Super Modern Browsers */
+			url("/fonts/quicksand/quicksand-v21-latin-700.woff") format("woff"),
+		/* Modern Browsers */ url("/fonts/quicksand/quicksand-v21-latin-700.ttf")
+			format("truetype"),
+		/* Safari, Android, iOS */
+			url("/fonts/quicksand/quicksand-v21-latin-700.svg#Quicksand")
+			format("svg"); /* Legacy iOS */
+}
+
+*,
+*::before,
+*::after {
+	padding: 0;
+	margin: 0;
+	box-sizing: inherit;
+}
+
+li {
+	list-style: none;
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+	color: inherit;
+	text-decoration: none;
+	outline: none;
 }
 
-* {
-  box-sizing: border-box;
+@media screen and (max-width: 1920px) {
+	html {
+		font-size: 66.406%; /*17/16* 62.5*/
+	}
+}
+
+@media screen and (max-width: 1100px) {
+	html {
+		font-size: 62.5%; /*default browser font = 16px => convert to 10px [16 * 62.5%]*/
+	}
+}
+
+@media screen and (max-width: 800px) {
+	html {
+		font-size: 59.6%; /* 15/16 * 62.5 */
+	}
+}
+@media screen and (max-width: 414px) {
+	html {
+		font-size: 54.68%; /* 14/16 * 62.5 */
+	}
+}
+
+body {
+	font-size: 1.5rem;
+	box-sizing: border-box;
+	font-family: "Quicksand";
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
