--- a/styles/globals.css
+++ b/styles/globals.css
@@ -80,6 +80,8 @@
 
 	--shadow: rgba(84, 84, 84, 0.2);
 	--shadow1: rgba(84, 84, 84, 0.4);
+
+	--red: #e31a00;
 }
 
 *,
@@ -132,4 +134,21 @@ a {
 	color: inherit;
 	text-decoration: none;
 	outline: none;
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+	border: 0.1rem solid var(--gray1);
+	/* // outline: none; */
+	-webkit-text-fill-color: var(--black);
+	box-shadow: none;
+	-webkit-box-shadow: 0 0 0px 1000px transparent inset;
+	transition: background-color 5000s ease-in-out 0s;
 }
