--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,58 +1,54 @@
+/* josefin-sans-regular - latin */
 @font-face {
-	font-family: "Quicksand";
-	font-style: normal;
-	font-weight: 300;
-	src: url("/fonts/quicksand/quicksand-v21-latin-300.eot"); /* IE9 Compat Modes */
-	src: local(""),
-		url("/fonts/quicksand/quicksand-v21-latin-300.eot?#iefix")
-			format("embedded-opentype"),
-		/* IE6-IE8 */ url("/fonts/quicksand/quicksand-v21-latin-300.woff2")
-			format("woff2"),
-		/* Super Modern Browsers */
-			url("/fonts/quicksand/quicksand-v21-latin-300.woff") format("woff"),
-		/* Modern Browsers */ url("/fonts/quicksand/quicksand-v21-latin-300.ttf")
-			format("truetype"),
-		/* Safari, Android, iOS */
-			url("/fonts/quicksand/quicksand-v21-latin-300.svg#Quicksand")
-			format("svg"); /* Legacy iOS */
-}
-/* quicksand-regular - latin */
-@font-face {
-	font-family: "Quicksand";
+	font-family: "Josefin Sans";
 	font-style: normal;
 	font-weight: 400;
-	src: url("/fonts/quicksand/quicksand-v21-latin-regular.eot"); /* IE9 Compat Modes */
+	src: url("/fonts/josefin-sans-v16-latin-regular.eot"); /* IE9 Compat Modes */
 	src: local(""),
-		url("/fonts/quicksand/quicksand-v21-latin-regular.eot?#iefix")
+		url("/fonts/josefin-sans-v16-latin-regular.eot?#iefix")
 			format("embedded-opentype"),
-		/* IE6-IE8 */ url("/fonts/quicksand/quicksand-v21-latin-regular.woff2")
+		/* IE6-IE8 */ url("/fonts/josefin-sans-v16-latin-regular.woff2")
 			format("woff2"),
 		/* Super Modern Browsers */
-			url("/fonts/quicksand/quicksand-v21-latin-regular.woff") format("woff"),
-		/* Modern Browsers */
-			url("/fonts/quicksand/quicksand-v21-latin-regular.ttf") format("truetype"),
-		/* Safari, Android, iOS */
-			url("/fonts/quicksand/quicksand-v21-latin-regular.svg#Quicksand")
-			format("svg"); /* Legacy iOS */
-}
-/* quicksand-700 - latin */
-@font-face {
-	font-family: "Quicksand";
-	font-style: normal;
-	font-weight: 700;
-	src: url("/fonts/quicksand/quicksand-v21-latin-700.eot"); /* IE9 Compat Modes */
-	src: local(""),
-		url("/fonts/quicksand/quicksand-v21-latin-700.eot?#iefix")
-			format("embedded-opentype"),
-		/* IE6-IE8 */ url("/fonts/quicksand/quicksand-v21-latin-700.woff2")
-			format("woff2"),
-		/* Super Modern Browsers */
-			url("/fonts/quicksand/quicksand-v21-latin-700.woff") format("woff"),
-		/* Modern Browsers */ url("/fonts/quicksand/quicksand-v21-latin-700.ttf")
+			url("/fonts/josefin-sans-v16-latin-regular.woff") format("woff"),
+		/* Modern Browsers */ url("/fonts/josefin-sans-v16-latin-regular.ttf")
 			format("truetype"),
 		/* Safari, Android, iOS */
-			url("/fonts/quicksand/quicksand-v21-latin-700.svg#Quicksand")
-			format("svg"); /* Legacy iOS */
+			url("/fonts/josefin-sans-v16-latin-regular.svg#JosefinSans") format("svg"); /* Legacy iOS */
+}
+/* josefin-sans-300 - latin */
+@font-face {
+	font-family: "Josefin Sans";
+	font-style: normal;
+	font-weight: 300;
+	src: url("/fonts/josefin-sans-v16-latin-300.eot"); /* IE9 Compat Modes */
+	src: local(""),
+		url("/fonts/josefin-sans-v16-latin-300.eot?#iefix")
+			format("embedded-opentype"),
+		/* IE6-IE8 */ url("/fonts/josefin-sans-v16-latin-300.woff2") format("woff2"),
+		/* Super Modern Browsers */ url("/fonts/josefin-sans-v16-latin-300.woff")
+			format("woff"),
+		/* Modern Browsers */ url("/fonts/josefin-sans-v16-latin-300.ttf")
+			format("truetype"),
+		/* Safari, Android, iOS */
+			url("/fonts/josefin-sans-v16-latin-300.svg#JosefinSans") format("svg"); /* Legacy iOS */
+}
+/* josefin-sans-700 - latin */
+@font-face {
+	font-family: "Josefin Sans";
+	font-style: normal;
+	font-weight: 700;
+	src: url("/fonts/josefin-sans-v16-latin-700.eot"); /* IE9 Compat Modes */
+	src: local(""),
+		url("/fonts/josefin-sans-v16-latin-700.eot?#iefix")
+			format("embedded-opentype"),
+		/* IE6-IE8 */ url("/fonts/josefin-sans-v16-latin-700.woff2") format("woff2"),
+		/* Super Modern Browsers */ url("/fonts/josefin-sans-v16-latin-700.woff")
+			format("woff"),
+		/* Modern Browsers */ url("/fonts/josefin-sans-v16-latin-700.ttf")
+			format("truetype"),
+		/* Safari, Android, iOS */
+			url("/fonts/josefin-sans-v16-latin-700.svg#JosefinSans") format("svg"); /* Legacy iOS */
 }
 
 :root {
@@ -118,10 +114,11 @@
 body {
 	/* min-width: 100vw; */
 	overflow-x: hidden;
-	font-size: 1.7rem;
+	font-size: 1.95rem;
 	line-height: 1.3;
 	box-sizing: border-box;
-	font-family: "Quicksand";
+	font-family: "Josefin Sans";
+	/* font-weight: 300; */
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
