--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,52 +3,58 @@
 	font-family: "Josefin Sans";
 	font-style: normal;
 	font-weight: 400;
-	src: url("/fonts/josefin-sans-v16-latin-regular.eot"); /* IE9 Compat Modes */
+	src: url("../fonts/josefin/josefin-sans-v16-latin-regular.eot"); /* IE9 Compat Modes */
 	src: local(""),
-		url("/fonts/josefin-sans-v16-latin-regular.eot?#iefix")
+		url("../fonts/josefin/josefin-sans-v16-latin-regular.eot?#iefix")
 			format("embedded-opentype"),
-		/* IE6-IE8 */ url("/fonts/josefin-sans-v16-latin-regular.woff2")
+		/* IE6-IE8 */ url("../fonts/josefin/josefin-sans-v16-latin-regular.woff2")
 			format("woff2"),
 		/* Super Modern Browsers */
-			url("/fonts/josefin-sans-v16-latin-regular.woff") format("woff"),
-		/* Modern Browsers */ url("/fonts/josefin-sans-v16-latin-regular.ttf")
+			url("../fonts/josefin/josefin-sans-v16-latin-regular.woff") format("woff"),
+		/* Modern Browsers */
+			url("../fonts/josefin/josefin-sans-v16-latin-regular.ttf")
 			format("truetype"),
 		/* Safari, Android, iOS */
-			url("/fonts/josefin-sans-v16-latin-regular.svg#JosefinSans") format("svg"); /* Legacy iOS */
+			url("../fonts/josefin/josefin-sans-v16-latin-regular.svg#JosefinSans")
+			format("svg"); /* Legacy iOS */
 }
 /* josefin-sans-300 - latin */
 @font-face {
 	font-family: "Josefin Sans";
 	font-style: normal;
 	font-weight: 300;
-	src: url("/fonts/josefin-sans-v16-latin-300.eot"); /* IE9 Compat Modes */
+	src: url("../fonts/josefin/josefin-sans-v16-latin-300.eot"); /* IE9 Compat Modes */
 	src: local(""),
-		url("/fonts/josefin-sans-v16-latin-300.eot?#iefix")
+		url("../fonts/josefin/josefin-sans-v16-latin-300.eot?#iefix")
 			format("embedded-opentype"),
-		/* IE6-IE8 */ url("/fonts/josefin-sans-v16-latin-300.woff2") format("woff2"),
-		/* Super Modern Browsers */ url("/fonts/josefin-sans-v16-latin-300.woff")
-			format("woff"),
-		/* Modern Browsers */ url("/fonts/josefin-sans-v16-latin-300.ttf")
+		/* IE6-IE8 */ url("../fonts/josefin/josefin-sans-v16-latin-300.woff2")
+			format("woff2"),
+		/* Super Modern Browsers */
+			url("../fonts/josefin/josefin-sans-v16-latin-300.woff") format("woff"),
+		/* Modern Browsers */ url("../fonts/josefin/josefin-sans-v16-latin-300.ttf")
 			format("truetype"),
 		/* Safari, Android, iOS */
-			url("/fonts/josefin-sans-v16-latin-300.svg#JosefinSans") format("svg"); /* Legacy iOS */
+			url("../fonts/josefin/josefin-sans-v16-latin-300.svg#JosefinSans")
+			format("svg"); /* Legacy iOS */
 }
 /* josefin-sans-700 - latin */
 @font-face {
 	font-family: "Josefin Sans";
 	font-style: normal;
 	font-weight: 700;
-	src: url("/fonts/josefin-sans-v16-latin-700.eot"); /* IE9 Compat Modes */
+	src: url("../fonts/josefin/josefin-sans-v16-latin-700.eot"); /* IE9 Compat Modes */
 	src: local(""),
-		url("/fonts/josefin-sans-v16-latin-700.eot?#iefix")
+		url("../fonts/josefin/josefin-sans-v16-latin-700.eot?#iefix")
 			format("embedded-opentype"),
-		/* IE6-IE8 */ url("/fonts/josefin-sans-v16-latin-700.woff2") format("woff2"),
-		/* Super Modern Browsers */ url("/fonts/josefin-sans-v16-latin-700.woff")
-			format("woff"),
-		/* Modern Browsers */ url("/fonts/josefin-sans-v16-latin-700.ttf")
+		/* IE6-IE8 */ url("../fonts/josefin/josefin-sans-v16-latin-700.woff2")
+			format("woff2"),
+		/* Super Modern Browsers */
+			url("../fonts/josefin/josefin-sans-v16-latin-700.woff") format("woff"),
+		/* Modern Browsers */ url("../fonts/josefin/josefin-sans-v16-latin-700.ttf")
 			format("truetype"),
 		/* Safari, Android, iOS */
-			url("/fonts/josefin-sans-v16-latin-700.svg#JosefinSans") format("svg"); /* Legacy iOS */
+			url("../fonts/josefin/josefin-sans-v16-latin-700.svg#JosefinSans")
+			format("svg"); /* Legacy iOS */
 }
 
 :root {
