migrated to scss modules

--- a/components/Articles/articles.module.scss
+++ b/components/Articles/articles.module.scss
@@ -1,31 +1,33 @@
-import styled from "styled-components"
-
-export const Page = styled.div`
+.page {
 	display: grid;
 	grid-template-columns: 1fr;
 	grid-template-rows: auto 1fr auto;
 	min-height: 100vh;
 	background-color: #292929;
 	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='400' height='400' viewBox='0 0 800 800'%3E%3Cg fill='none' stroke='%233b3b3b' stroke-width='1'%3E%3Cpath d='M769 229L1037 260.9M927 880L731 737 520 660 309 538 40 599 295 764 126.5 879.5 40 599-197 493 102 382-31 229 126.5 79.5-69-63'/%3E%3Cpath d='M-31 229L237 261 390 382 603 493 308.5 537.5 101.5 381.5M370 905L295 764'/%3E%3Cpath d='M520 660L578 842 731 737 840 599 603 493 520 660 295 764 309 538 390 382 539 269 769 229 577.5 41.5 370 105 295 -36 126.5 79.5 237 261 102 382 40 599 -69 737 127 880'/%3E%3Cpath d='M520-140L578.5 42.5 731-63M603 493L539 269 237 261 370 105M902 382L539 269M390 382L102 382'/%3E%3Cpath d='M-222 42L126.5 79.5 370 105 539 269 577.5 41.5 927 80 769 229 902 382 603 493 731 737M295-36L577.5 41.5M578 842L295 764M40-201L127 80M102 382L-261 269'/%3E%3C/g%3E%3Cg fill='%23525252'%3E%3Ccircle cx='769' cy='229' r='5'/%3E%3Ccircle cx='539' cy='269' r='5'/%3E%3Ccircle cx='603' cy='493' r='5'/%3E%3Ccircle cx='731' cy='737' r='5'/%3E%3Ccircle cx='520' cy='660' r='5'/%3E%3Ccircle cx='309' cy='538' r='5'/%3E%3Ccircle cx='295' cy='764' r='5'/%3E%3Ccircle cx='40' cy='599' r='5'/%3E%3Ccircle cx='102' cy='382' r='5'/%3E%3Ccircle cx='127' cy='80' r='5'/%3E%3Ccircle cx='370' cy='105' r='5'/%3E%3Ccircle cx='578' cy='42' r='5'/%3E%3Ccircle cx='237' cy='261' r='5'/%3E%3Ccircle cx='390' cy='382' r='5'/%3E%3C/g%3E%3C/svg%3E");
-`
+}
 
-export const Main = styled.main`
+.page_benefits {
+	@extend .page;
+}
+
+.main {
 	width: 95%;
 	max-width: 85rem;
 	/* background-color: lightgreen; */
 	margin: 7rem auto 0 auto;
 	padding: 1rem;
 	padding-top: 4rem;
-`
-export const Title = styled.h1`
+}
+
+.title {
 	font-size: 2.6rem;
 	text-align: center;
 	color: var(--white);
 	margin-bottom: 3rem;
-`
+}
 
-export const Heading = styled.h2`
-	/* max-width: 10rem; */
+.heading {
 	font-size: 1.8rem;
 	margin-bottom: 1rem;
 	color: var(--black1);
@@ -37,42 +39,45 @@ export const Heading = styled.h2`
 	@media screen and (max-width: 44.46em) {
 		max-width: 40rem;
 	}
-`
+}
 
-export const Paragraph = styled.p`
+.parag {
 	text-indent: 4rem;
-	/* text-align: justify; */
-	margin-bottom: ${props => (props.withList ? "1.1rem" : "2.2rem")};
+	margin-bottom: 1.1rem;
 	padding: 0 4rem 0 4rem;
 	color: var(--white1);
 	font-weight: 300;
-	/* font-size: 1.8rem; */
 
 	@media screen and (max-width: 30.4em) {
 		padding: 0 1rem 0 1rem;
 	}
-`
 
-export const Points = styled.ul`
+	&_wl {
+		@extend .parag;
+		margin-bottom: 2.2rem;
+	}
+}
+
+.points {
 	width: 100%;
-`
+}
 
-export const Point = styled.li`
+.point {
 	width: 100%;
-`
+}
 
-export const List = styled.ul`
+.list {
 	margin-left: 10%;
 	margin-bottom: 2rem;
 	color: var(--white1);
 	font-weight: 300;
-`
-export const Item = styled.li`
+}
+
+.item {
 	list-style: circle;
 	padding: 0.3rem;
-	/* background: blue; */
-	/* margin: rem; */
-`
-export const Key = styled.span`
+}
+
+.key {
 	color: var(--green);
-`
+}
