--- a/components/Navigation/navigation.module.scss
+++ b/components/Navigation/navigation.module.scss
@@ -1,15 +1,14 @@
-import styled from "styled-components"
+$bp: 36em;
 
-const bp = "36em"
-
-export const NavBar = styled.div`
+.bar {
 	z-index: var(--navIndex);
 	width: 100%;
 	position: fixed;
 	padding: 1rem;
 	background-color: var(--black);
-`
-export const NavMenu = styled.button`
+}
+
+.menu {
 	font-size: 4rem;
 	z-index: var(--navIndex);
 	display: none;
@@ -24,52 +23,54 @@ export const NavMenu = styled.button`
 	top: 0.2rem;
 	right: 1.5rem;
 
-	@media screen and (max-width: ${bp}) {
+	@media screen and (max-width: $bp) {
 		display: block;
 	}
 
 	svg {
 		vertical-align: middle;
 	}
-`
+}
 
-export const Nav = styled.nav`
+.nav {
 	width: 100%;
 	display: flex;
 	flex-direction: column;
 	align-items: stretch;
 	justify-content: center;
-`
+}
 
-export const NavHome = styled.div`
-	@media screen and (min-width: ${bp}) {
+.home {
+	@media screen and (min-width: $bp) {
 		display: none;
 	}
-`
+}
 
-export const NavLinks = styled.ul`
-	/* padding: 1rem; */
-
+.links {
 	display: grid;
 	align-items: center;
 	grid-template-columns: 1fr auto; //separate home from rest of options
 
-	@media screen and (max-width: ${bp}) {
-		display: ${props => (props.shown ? "flex" : "none")};
-		flex-direction: column;
-		align-items: flex-start;
+	&_shown {
+		@extend .links;
+		@media screen and (max-width: $bp) {
+			display: flex;
+			flex-direction: column;
+			align-items: flex-start;
+		}
 	}
-`
 
-export const Divider = styled.div`
-	display: flex;
-	@media screen and (max-width: ${bp}) {
-		flex-direction: column;
-		align-items: flex-start;
+	&_hidden {
+		@extend .links;
+		@media screen and (max-width: $bp) {
+			display: none;
+			flex-direction: column;
+			align-items: flex-start;
+		}
 	}
-`
+}
 
-export const NavLink = styled.a`
+.link {
 	font-size: 2rem;
 	cursor: pointer;
 	border: 0.1rem solid transparent;
@@ -88,4 +89,12 @@ export const NavLink = styled.a`
 	svg {
 		display: inline-block;
 	}
-`
+}
+
+.divider {
+	display: flex;
+	@media screen and (max-width: $bp) {
+		flex-direction: column;
+		align-items: flex-start;
+	}
+}
