--- a/components/Pages/library.module.scss
+++ b/components/Pages/library.module.scss
@@ -32,34 +32,22 @@
 	grid-template-columns: repeat(auto-fill, minmax(min(20rem, 100%), 1fr));
 	align-items: center;
 	grid-auto-flow: row dense;
+	// gap: 1rem;
 }
 
-.book {
-	margin: 1rem;
-	box-shadow: 0.2rem 0.2rem 0.8rem var(--shadow);
-	animation: from-left 2s cubic-bezier(0, 1, 0, 1);
-	animation-fill-mode: backwards;
-}
-
-@mixin generate-book-classes($num) {
-	@for $i from 0 through $num {
-		.book_#{$i} {
-			@extend .book;
-			animation-delay: #{$i} / 10 + 0s;
-		}
-		@debug #{$i}/ 10 + 0s;
+@for $i from 0 through 17 {
+	.book_#{$i} {
+		margin: 1rem;
+		animation: from-left
+			2s
+			cubic-bezier(0, 1, 0, 1)
+			#{$i/10 +
+			0s}
+			normal
+			backwards;
 	}
 }
-
-@include generate-book-classes(17);
 
 .cover {
-	display: block;
 	width: 100%;
-	/* height: 100%; */
-	object-fit: stretch;
-	:hover {
-		background-color: green;
-		z-index: -1;
-	}
 }
